# solros

./: Makefile  Makefile.inc  README.md
config/: .gitignore  config-cpu-bumblebee.py  config-cpu-ramjet.py  config-cpu-sanidhya.py  config-cpu-vortex.py  config-host-kernel-ramjet-netbrdge.conf  config-mic-bumblebee.py  config-mic-ramjet.py  config-mic-sanidhya.py  config-phi-kernel
diod/: .gitignore  Makefile.am  TODO  configure.ac  pci-ring-buffer
diod/config/: x_ac_prbtrans.m4
diod/diod/: Makefile.am  diod.c  ioctx.c  ioctx.h  ops.c  xattr.c  xattr.h  zcio.c  zcio.h
diod/libdiod/: Makefile.am  diod_conf.c  diod_conf.h  diod_prb.c  diod_prb.h
diod/libfblkmap/: .gitignore  Makefile.am  Makefile.tc  fblkmap.c  fblkmap.h  run-tc.c
diod/libnpfs/: 9p.h  Makefile.am  ctl.c  fcall.c  fidpool.c  fmt.c  np.c  npfs.h  prbtrans.c
diod/tests/user/: t10
host-kernel/: Makefile
host-kernel/include/linux/: nvme.h
host-kernel/include/uapi/linux/: nvme.h
mpss-modules/host/: linux.c
mpss-modules/host/vhost/: mic_blk.c
mpss-modules/include/: scif.h
mpss-modules/micscif/: micscif_api.c  micscif_fd.c  micscif_rma_dma.c
mpss-modules/vnet/: micveth_dma.c
network/src/: CMakeLists.txt  Makefile  README.md
network/src/include/: link.h  list.h  netmsg.h  pcnconfig.h  pcnlink-api.h  pcnlink-epoll.h  pcnlink-kapi.h  pcnlink-socket.h  pcnlink-uapi.h  pcnporting.h  proxy.h  spsc_queue.h
network/src/liblink/: CMakeLists.txt  link.c  netmsg.c
network/src/libpcnlink/: CMakeLists.txt  pcnlink.c  pcnlink_eventpoll.c  pcnlink_eventpoll.h  pcnlink_i.h  pcnlink_uapi.c
network/src/libproxy/: CMakeLists.txt  epserver.conf  proxy.c  proxy_i.h  proxy_u.c
network/src/libproxy_mtcp/: CMakeLists.txt  proxy.c  proxy_i.h
network/src/lmbench/: CMakeLists.txt  bench.h  bw_tcp.c  lib_mem.c  lib_tcp.c  lib_tcp.h  lib_timing.c  lib_udp.h  tcp_benchmark.c
network/src/pcnsrv/: CMakeLists.txt  pcnsrv.c
network/src/pcnsrv_mtcp/: CMakeLists.txt  epserver.conf
network/src/pcnsrv_mtcp/config/: arp.conf  route.conf
network/src/unittest/: CMakeLists.txt
network/src/unittest/netecho/: CMakeLists.txt  netecho.c
network/src/util/: dpdk  mtcp  pci-ring-buffer
nvme-p2p/: 80-nvme-p2p.rules  Kbuild  Makefile  README  nvme-core.c  nvme-mic.c  nvme-p2p-blacklist.conf  nvme-phi.c  nvme-phi.h  nvme-scif.c  nvme.h
pci-ring-buffer/build_kernel/: .built-in.o.cmd  .pci_ring_buffer.ko.cmd  .pci_ring_buffer.mod.o.cmd  .pci_ring_buffer.o.cmd  .pci_ring_buffer_test.ko.cmd  .pci_ring_buffer_test.mod.o.cmd  .pci_ring_buffer_test.o.cmd  modules.order  pci_ring_buffer.mod.c  pci_ring_buffer_test.mod.c
pci-ring-buffer/include/: arch.h  ring_buffer.h  ring_buffer_common.h  ring_buffer_scif.h
pci-ring-buffer/lib/: CMakeLists.txt  ring_buffer.c  ring_buffer_i.h  ring_buffer_porting.c  ring_buffer_porting.h  ring_buffer_scif.c
pci-ring-buffer/test_kernel/: .rbs-blocking-ut.o.cmd
phi-kernel/: .gitignore  .scmversion  Kbuild  Makefile  NOTE  mpss
phi-kernel/Documentation/kdb/: kdb.mm
phi-kernel/arch/: .gitignore
phi-kernel/arch/x86/: Kconfig  Kconfig.cpu  Kconfig.debug  Makefile
phi-kernel/arch/x86/configs/: k1om.uconfig  l1om.uconfig  mic-cov.uconfig  mic-debug.uconfig  mic-emu.uconfig  mic-min.uconfig  mic-mpss.uconfig  mic-uart.uconfig
phi-kernel/arch/x86/kdb/: Makefile  kdba_bp.c  kdba_id.c  kdba_io.c  kdba_support.c  pc_keyb.h  x86-dis.c
phi-kernel/arch/x86/kernel/: Makefile  dumpstack.c  entry_32.S  entry_64.S  (+18 more)
phi-kernel/drivers/: Kconfig  Makefile
phi-kernel/drivers/char/: Kconfig
phi-kernel/drivers/cpufreq/: Makefile  cpufreq.c  cpufreq_knc_governor.c
phi-kernel/drivers/cpuidle/: Kconfig
phi-kernel/drivers/micpm/: Kconfig  Makefile  corec6.S  corec6_trampoline.S  mic_cpufreq.c  mic_cpufreq.h  mic_cpuidle.c  mic_cpuidle.h  mic_event.h  mic_menu.c  mic_menu.h  mic_pm.c  mic_pm_card.h  mic_pmcommon.h  mic_tmu.c  micidle_common.h  micpm_common.h  micpm_proc.c  micpm_proc.h  micras.h  pc6_trampoline.S  pm_scif.h
phi-kernel/drivers/sfi/: sfi_core.c
phi-kernel/fs/: exec.c
phi-kernel/fs/9p/: Kconfig  fid.c  fid.h  v9fs.c  v9fs.h  v9fs_vfs.h  vfs_addr.c  vfs_dentry.c  vfs_file.c  vfs_inode.c  vfs_inode_dotl.c  vfs_super.c
phi-kernel/fs/hugetlbfs/: inode.c
phi-kernel/fs/nfs/: file.c  write.c
phi-kernel/fs/proc/: meminfo.c  mmu.c
phi-kernel/include/asm-generic/: cacheflush.h  kmap_types.h
phi-kernel/include/linux/: audit.h  backing-dev.h  binfmts.h  clocksource.h  console.h  cpu.h  cpufreq.h  cpuidle.h  dis-asm.h  elf-em.h  highmem.h  hugetlb.h  init.h  kdb-old.h  kdb.h  kdbprivate.h  mm.h  mm_types.h  nfs_fs.h  page-flags.h  pagemap.h  prctl.h  prefetch.h  reboot.h  sched.h  smp.h  socket.h  swap.h  syscalls.h  sysctl.h  time.h
phi-kernel/init/: main.c
phi-kernel/kdb/: kdb_bp.c  kdb_bt.c  kdb_cmds  kdb_id.c  kdb_io.c  kdbdereference.c  kdbmain.c  kdbsupport.c
phi-kernel/kdb/modules/: kdbm_debugtypes.c  kdbm_pg.c  kdbm_sched.c  kdbm_task.c  kdbm_vm.c  kdbm_x86.c
phi-kernel/kernel/: cpu.c  exit.c  fork.c  hrtimer.c  kallsyms.c  kexec.c  module.c  panic.c  printk.c  ptrace.c  sched.c  signal.c  smp.c  sys.c  sysctl_check.c
phi-kernel/kernel/gcov/: gcc_3_4.c  gcov.h
phi-kernel/kernel/time/: clocksource.c  timekeeping.c
phi-kernel/lib/: Kconfig  Makefile  bug.c  pci-ring-buffer
phi-kernel/mm/: Kconfig  bootmem.c  filemap.c  highmem.c  hugetlb.c  migrate.c  mmzone.c  page_alloc.c  percpu.c  readahead.c  shmem.c  slub.c  swapfile.c  vmalloc.c
phi-kernel/net/: Kconfig  Makefile
phi-kernel/net/9p/: 9pnet.mod.c  Kconfig  Makefile  client.c  mod.c  protocol.c  protocol.h  trans_fd.c  trans_prb.c
phi-kernel/net/core/: sock.c
phi-kernel/net/pcnlink/: Kconfig  Makefile  af_pcnlink.c  src
phi-kernel/scripts/: recordmcount.c  recordmcount.pl
phi-kernel/tools/perf/: builtin-stat.c  perf.h
scripts/: .gitignore  comm-plot.py  config.py  config.sh  config.sh_mic  copy_shared_libs.sh  cpu-topology.py  ctrl.py  dmesgw_mic  fio-plot.py  fio2log.py  install-perf.sh  machineconfig.py  nfs-down  nfs-install  nfs-up  parser.py  postinst-phiknl.py  shadow.awk  utils.py
(+145 files in other folders)
